feat: add single-user shadow web ui
